Closed Bug 467072 Opened 16 years ago Closed 16 years ago

Patch for export macro usage in the Qt part of the new embedding API

Categories

(Core Graveyard :: Embedding: APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: tobias.hunger, Unassigned)

References

Details

Attachments

(1 file, 3 obsolete files)

User-Agent:       Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.0.4) Gecko/2008111616 Ubuntu/9.04 (jaunty) Firefox/3.0.4
Build Identifier: incubator/embedding hg repository rev. dabab67820e6

The (to be) attached patch fixes export macro usage of the Qt part of the new embedding APIs found in incubator.

It further adds copyright headers where not yet available.

Please consider this patch for application to incubator.


Reproducible: Always

Steps to Reproduce:
1.
2.
3.
Attached patch The actual patch (obsolete) — Splinter Review
Attachment #350450 - Attachment is patch: true
Attachment #350450 - Attachment mime type: application/x-gzip → text/plain
Attached patch The actual patch (not gzip'ed) (obsolete) — Splinter Review
Is there anything I can do to help getting this patch applied?
Blocks: 467076
Depends on: 469310
Depends on: 469311
Attached patch Export macro fix. (obsolete) — Splinter Review
Update the patch to newest version of the source found in hg.

Depend on cleanup patches.
Attachment #350450 - Attachment is obsolete: true
Attachment #350456 - Attachment is obsolete: true
Blocks: 467074
Fix copyright year to 2007 instead of 20007.

Otherwise this patch is identical with the previous version.
Attachment #352713 - Attachment is obsolete: true
http://hg.mozilla.org/incubator/embedding/rev/018e679cbae0
Status: UNCONFIRMED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: