Bug 467072: Fix export macro usage in Qt wrapper, r=mfinkle